--- a/hello/indexm.html
+++ b/hello/indexm.html
@@ -1,56 +1,39 @@
-<!DOCTYPE html. fonte01 html <head>
-
+<!DOCTYPE html>
 <html lang="pt-br">
 <head>
-
-  <meta charset="UTF-8"> 
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <title>Fontes com Google Fonts</title>
-
+  <title>fontes com google fonts </title>
   <style>
-    @import url('https://fonts.googleapis. com/css2?family=Kaushan+Script&
+    @import url('https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap');
 
-      display swap');
-
-      @import url('https://fonts.googleapis. com/css2?family=Fredericka+the+Great&
-
-        display=swap');
-
-        @import url('https://fonts.googleapis.
-
-          com/css2?family=Work+Sans:ital, wght@e, 100; 0, 200; 0, 300; 0, 400; 0, 500; 0, 600; 0,
-
-          700; 0, 800; 0, 900; 1, 100; 1, 200; 1, 300; 1,
-
-          400; 1, 500; 1, 600; 1, 700; 1, 800; 1, 9002 display=swap');
-
-          body {
-
-            font-family: 'Work Sans', Arial,
-
-            Verdana, sans-serif;
+    @import url('https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap');
+    body{
+            font-family: 'Work Sans', arial, verdana,sans-serif;
             font-size: 16px;
-
             color: black;
-
-           }
-
-          h1 { 
-
-            olaa 
-
-            font-family: 'Fredericka the
-
-            Great', cursive; 
-            
-            font-size: 3em;
-
-            font-weight: normal;
-
-          }
-
-          <style> 
-            </head> 
-            <body>, ,
-          
+    }
+  h1{+
+  font-family:'Kaushan Script', 
+  sans-serif;
+  font-size: 3em;
+  }
+  h2{
+    font-family:Kaushan Script', 
+  sans-serif;
+  font-size: 2em;
+  }
+  </style>
+</head>
+<body>
+  <h1>titulo</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat dolorem nulla doloremque quas,
+       non voluptates vel itaque perferendis laboriosam quos, 
+       facilis officia molestias ducimus voluptatum repellendus consequatur similique delectus. Temporibus!</p>
+<h2>sub titulo</h2>
+<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vero, tenetur ea aliquid deleniti laborum eos vel repellat ratione asperiores. 
+  Qui quis, impedit repellat veritatis dolorem unde ducimus voluptatem laudantium ullam?</p>
+</p>
+</body>
+</html>
