--- a/hello/fontes 02.html
+++ b/hello/fontes 02.html
@@ -9,7 +9,7 @@
     <style>
         @font-face {
             font-family: love;
-            src: url('lovelady') formal('opentype'), url('lovelady') format(truetype);
+            src: url('Lovelady') formal('opentype'), url('Lovelady') format(truetype);
             font-weight: normal;
             font-style: normal;
 
