--- a/hello/fontes 02.html
+++ b/hello/fontes 02.html
@@ -8,8 +8,8 @@
     <title>fontes externas</title>
     <style>
         @font-face {
-            font-family: love;
-            src: url('Lovelady') formal('opentype'), url('Lovelady') format(truetype);
+            font-family: 'love';
+            src: url('LoveLadyPersonalUse') format('opentype'),url('LoveLadyPersonalUse') format(truetype);
             font-weight: normal;
             font-style: normal;
 
