--- a/hello/fontes 02.html
+++ b/hello/fontes 02.html
@@ -9,7 +9,7 @@
     <style>
         @font-face {
             font-family: 'love';
-            src: url('LoveLadyPersonalUse') format('opentype'),url('LoveLadyPersonalUse') format(truetype);
+            src: url('LoveLadyPersonalUse.ttf') format('opentype'),url('LoveLadyPersonalUse.ttf') format(truetype);
             font-weight: normal;
             font-style: normal;
 
