--- a/hello/indexm.html
+++ b/hello/indexm.html
@@ -1,39 +1,52 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>fontes com google fonts </title>
-  <style>
-    @import url('https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap');
+<!DOCTYPE html> 2 <html lang="pt-br">
 
-    @import url('https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap');
-    body{
-            font-family: 'Work Sans', arial, verdana,sans-serif;
-            font-size: 16px;
-            color: black;
-    }
-  h1{+
-  font-family:'Kaushan Script', 
-  sans-serif;
-  font-size: 3em;
-  }
-  h2{
-    font-family:Kaushan Script', 
-  sans-serif;
-  font-size: 2em;
-  }
-  </style>
+<head>
+
+<meta charset="UTF-8">
+
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<title>Alinhamentos</title>
+
+<style>
+
+body {
+
+font: normal 16px Arial, Verdana, serif; text-align: left;
+
+}
+h1 {
+
+text-align: center;
+
+}
+
+I
+
+h2 {
+
+text-align: right; H
+
+}
+
+
+text-align: justify; 
+text-indent: 30px;
+
+</style>
+
 </head>
+
 <body>
-  <h1>titulo</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat dolorem nulla doloremque quas,
-       non voluptates vel itaque perferendis laboriosam quos, 
-       facilis officia molestias ducimus voluptatum repellendus consequatur similique delectus. Temporibus!</p>
-<h2>sub titulo</h2>
-<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vero, tenetur ea aliquid deleniti laborum eos vel repellat ratione asperiores. 
-  Qui quis, impedit repellat veritatis dolorem unde ducimus voluptatem laudantium ullam?</p>
-</p>
-</body>
-</html>
+
+<h1>Tipos de alinhamento</h1>
+
+<h2>Subtítulo</h2>
+<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+  Laudantium necessitatibus reiciendis qui sit fugit illum aperiam nam quod maiores, neque impedit nobis laboriosam illo. Dignissimos itaque ex sequi non ipsum!</p>
+  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veritatis ullam eos nobis consequatur voluptatem, culpa veniam pariatur.
+     Sit, reprehenderit libero soluta voluptates deleniti, deserunt, maiores veritatis repudiandae facilis alias iusto.</p>
+     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, temporibus! Fuga odio molestiae eius perspiciatis mollitia necessitatibus harum modi rerum, 
+      qui est tempora et impedit natus corrupti? Officiis, temporibus nisi.</p>
+      <body>
+      <html> 
