--- a/hello/indexm.html
+++ b/hello/indexm.html
@@ -1,52 +1,31 @@
-<!DOCTYPE html> 2 <html lang="pt-br">
-
+<!DOCTYPE html>
+<html lang="pt-br">
 <head>
-
-<meta charset="UTF-8">
-
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-<title>Alinhamentos</title>
-
-<style>
-
-body {
-
-font: normal 16px Arial, Verdana, serif; text-align: left;
-
-}
-h1 {
-
-text-align: center;
-
-}
-
-I
-
-h2 {
-
-text-align: right; H
-
-}
-
-
-text-align: justify; 
-text-indent: 30px;
-
-</style>
-
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>seletores personalizados</title>
+  <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-
-<h1>Tipos de alinhamento</h1>
-
-<h2>Subtítulo</h2>
-<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-  Laudantium necessitatibus reiciendis qui sit fugit illum aperiam nam quod maiores, neque impedit nobis laboriosam illo. Dignissimos itaque ex sequi non ipsum!</p>
-  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veritatis ullam eos nobis consequatur voluptatem, culpa veniam pariatur.
-     Sit, reprehenderit libero soluta voluptates deleniti, deserunt, maiores veritatis repudiandae facilis alias iusto.</p>
-     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, temporibus! Fuga odio molestiae eius perspiciatis mollitia necessitatibus harum modi rerum, 
-      qui est tempora et impedit natus corrupti? Officiis, temporibus nisi.</p>
-      <body>
-      <html> 
+  <h1> id="principal"</h1>
+  <h1>apredendo html </h1>
+  <h2>html basico</h2>
+  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati consequatur molestiae reprehenderit ipsum, iure illo totam, 
+    distinctio adipisci sapiente harum alias accusamus soluta eum! Ducimus minus voluptatem consectetur accusantium molestiae?</p>
+    <h2>html intermediario</h2>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quo voluptatem doloremque voluptates impedit alias 
+      aspernatur deleniti laboriosam perspiciatis culpa nemo error laudantium assumenda fuga veniam unde, voluptas doloribus dicta tempore?</p>
+      <h2>html avançado</h2>
+      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laudantium consequuntur 
+        impedit ea nihil ullam totam possimus voluptatem optio commodi tenetur minus laborum distinctio, dolorum asperiores vero eius dolorem illo? Labore.</p>
+        <h1>aprendendo css</h1>
+        <h2>css basico</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus expedita quis illum 
+          minima tenetur cumque quod rerum odit ipsam rem consectetur atque, necessitatibus nesciunt praesentium error temporibus dolores molestiae repellat.</p>
+         <h2>css intermediario</h2> 
+         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corporis porro impedit excepturi quisquam in, pariatur ratione, 
+          cupiditate consequuntur ea maxime esse at voluptas sequi. Obcaecati voluptas quas tenetur vel enim!</p>
+</body>
+</html>
+  
