--- a/hello/indexm.html
+++ b/hello/indexm.html
@@ -1,30 +1,33 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-br>
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>seletores personalizados</title>
-  <link rel="stylesheet" href="style.css">
+  <title>pseudo-classes</title>
+
+<style>
+div{
+  display: inline-block;
+  background-color: aquamarine;
+  border: 1xp solid black;
+  text-align: center;
+  height: 200px;
+  width: 200pc;
+
+}
+     div:hover{
+      background-color: yellow;
+     }
+</style>
+
 </head>
+
 <body>
-  <h1>apredendo html </h1>
-  <h2>html basico</h2>
-  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati consequatur molestiae reprehenderit ipsum, iure illo totam, 
-    distinctio adipisci sapiente harum alias accusamus soluta eum! Ducimus minus voluptatem consectetur accusantium molestiae?</p>
-    <h2>html intermediario</h2>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quo voluptatem doloremque voluptates impedit alias 
-      aspernatur deleniti laboriosam perspiciatis culpa nemo error laudantium assumenda fuga veniam unde, voluptas doloribus dicta tempore?</p>
-      <h2>html avançado</h2>
-      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laudantium consequuntur 
-        impedit ea nihil ullam totam possimus voluptatem optio commodi tenetur minus laborum distinctio, dolorum asperiores vero eius dolorem illo? Labore.</p>
-        <h1>aprendendo css</h1>
-        <h2>css basico</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus expedita quis illum 
-          minima tenetur cumque quod rerum odit ipsam rem consectetur atque, necessitatibus nesciunt praesentium error temporibus dolores molestiae repellat.</p>
-         <h2>css intermediario</h2> 
-         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corporis porro impedit excepturi quisquam in, pariatur ratione, 
-          cupiditate consequuntur ea maxime esse at voluptas sequi. Obcaecati voluptas quas tenetur vel enim!</p>
+<div id="d1">01</div>
+<div id="02">02</div>
+<div id="03">03</div>
+
 </body>
+
 </html>
-  
