--- a/hello/indexm.html
+++ b/hello/indexm.html
@@ -4,42 +4,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>links</title>
-  <style>
-    body{
-font-family: Arial, Helvetica, sans-serif;
-    }
-  a {
-color: red;
- text-decoration: none ;
- font-weight: bold;
-}
-
-  a:visited{
-    color: darkred;
-  }
-a:hover{
-  color: black;
-  text-decoration: underline;
-}
- a:active{
-  color: yellow;
- }
- a::after{
-  content: '[link]';
-  text-decoration: none;
-  font-weight: normal;
-  color: red;
- }
- </style>
-  </head>
+  <title>modelo de caixas</title>
+</head>
 <body>
-
-  <h1>personalizando links </h1>
-  <ul>
-    <li><a href="https://gustavoguanabara.github" target="-blank"> repositorio github</li>
-    <li><a href="https://youtube.com/cursoemvideo/"> canal do youtube</a></li>
-<li><a href="https://www.cursoemvideo.com"> sitedocursoemvido</a></li>
-  </ul>
+  <h1>exemplo de caixa box-level </h1>
+  <p>paragrafos tambem são exemplos de de caixa box-level, mas os <a href="#">links são exemplos de caixas inline-level </a>. vamos ver como tudo isso funciona .</p>
 </body>
 </html>
