--- a/hello/indexm.html
+++ b/hello/indexm.html
@@ -10,6 +10,29 @@
       background-color: purple;
       height: 200px;
       width: 300px;
+      border-width: 10px;
+      border-style: solid;
+      border-color: dark blue;
+
+      
+      padding-top:  10px; ;
+      padding-right: 10px; ;
+      padding-bottom: 10px;
+      padding-left: 10px;
+
+    }
+
+    a{   
+      border-width: 10px;
+      border-style: solid;
+      border-color: red;
+
+      padding-top:  10px; ;
+      padding-right: 10px; ;
+      padding-bottom: 10px;
+      padding-left: 10px;
+
+
     }
   </style>
 </head>
