--- a/hello/indexm.html
+++ b/hello/indexm.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>modelo de caixas</title>
   <style>
-    h1{
+    h1{ /* box-level */
       background-color: purple;
       height: 200px;
       width: 300px;
@@ -14,15 +14,25 @@
       border-style: solid;
       border-color: dark blue;
 
+
+
       
       padding-top:  10px; ;
       padding-right: 10px; ;
       padding-bottom: 10px;
       padding-left: 10px;
-
+      margin-top: 10px;
+      margin-right: 10px;
+      margin-bottom: 40px;
+      margin-left: 10px;
+      outline: 5px;
+      outline-style: dashed;
+      outline-color: salmon;
+  
+  
     }
 
-    a{   
+    a{   /* inline*/  
       border-width: 10px;
       border-style: solid;
       border-color: red;
