--- a/hello/indexm.html
+++ b/hello/indexm.html
@@ -1,210 +1,62 @@
-<!DOCTYPE html><
+<meta name="viewport" content="width=\,
 
-<html lang="pt-br">
-
-<head>
-
-<meta charset="UTF-8">
-
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
- <title Como surgiu o mascote do Android?> </title>
-<link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
-<link rel="stylesheet" href="estilo/style.css">
-</head>
-
-<body>
-
-<header>
-
-     <h1>Curiosidades de Tecnologia</h1>
-
-       <p>Tudo aquilo que você sempre quis saber sobre o mundo Tech, em um único
-
-          lugar</p>
-
-</header>
-
-<nav>
-
-<a href="#">Home</a>
-
-<a href="#">Notícias</a> <a href="#">Curiosidades</a>
-
-<a href="#">Fale Conosco</a>
-
-</nav>
-
-<main>
-
-<article>
-
-História do Mascote do Android
+initial-scale=1.0"> <title>Teste de Responsividade</title>
 
 
-Provavelmente você sabe que o sistema operacional Android, 
-mantido pelo Google é um dos mais utilizados para dispositivos móveis em todo o mundo.
- Mas tavez você não saiba que o seu simpático mascote tem um nome e uma história muito curiosa? Pois acompanhe esse artigo para aprender muita coisa sobre esse robozinho.
+<style>
 
-A primeira versão
-[14:36, 23/01/2023] Ketlen🍓: DOCTYPE html
+body {
 
-html lang="pt-br"
+  background-color: gray;
+}
 
-head
 
-meta charset="UTF-8"
+main {
 
-<meta name="viewport" content="width=device-width, initial-scale=1.0"> <title Como surgiu o mascote do Android?</title>
 
-<link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
+background-color:
+
+white;
+
+padding: 20px; border-radius: 10px;
+
+min-width: 280px;
+
+
+max-width: 800px;
+
+margin: auto;
+
+}
+
+img {
+
+width: 100%;
+}
+
+</style>
 
 </head>
 
 <body>
 
-<header>
-
-<h1>Curiosidades de Tecnologia</h1>
-
-<p>Tudo aquilo que você sempre quis saber sobre o mundo Tech, em um único
-
-lugar</p>
-
-</header>
-
-<nav>
-
-<a href="#">Home</a>
-
-<a href="#">Notícias</a> <a href="#">Curiosidades</a>
-
-<a href="#">Fale Conosco</a>
-
-</nav>
-
 <main>
 
-<article>
+<h1>Testando Responsividade</h1>
 
-História do Mascote do Android
+<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+   Nobis aut magnam praesentium sequi eos quasi fugiat corporis, assumenda soluta sed nostrum molestias. 
+   Repellendus sed inventore laudantium est assumenda ipsam dolor. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Modi
+   impedit ipsa unde perferendis tempora. Ducimus, esse? Eligendi eos maxime quis, optio ipsum nesciunt debitis ut blanditiis laudantium sunt, 
+   tenetur similique! Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+   Excepturi saepe earum reprehenderit tempore ratione deleniti doloribus labore officiis, assumenda delectus ipsam, fugiat,
+    voluptatem quisquam corporis mollitia enim qui quos possimus!</p>
 
+<picture> <source media="(max-width: 600px)" srcset="imagens/irina-blok-pq.jpg" <img src="imagens/irina-blok.jpg" alt="Irina Blok" ></picture>
 
-Provavelmente você sabe que o sistema operacional Android, mantido pelo Google é um dos mais utilizados para dispositivos móveis em todo o mundo. 
-Mas tavez você não saiba que o seu simpático mascote tem um nome e uma história muito curiosa? Pois acompanhe esse artigo para aprender muita coisa sobre esse robozinho.
+<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloremque voluptas architecto, vitae inventore iure a.
+   Ipsa voluptatum, perferendis optio quidem rem molestiae nam temporibus neque tempora, esse magni soluta voluptate.</p>
+   <main>
 
-A primeira versão
-[14:55, 23/01/2023] Ketlen🍓: A primeira tentativa de criar un mascote surgiu em 2007 e veio de um desenvolvedor chamado Dan Morrill. 
-Ele conta que abriu o Inkscape (software livre para vetorização de imagens) e criou sua própria versão de robo. O objetivo era apenas personificar o sistema apenas para a a sua equipe, não existia nenhuma solicitação da empresa para a criação de um mascote.
-
-[FOTO]
-
-Essa primeira versão bizarra até foi batizada em homenagem ao seu criador: seriam os Dandroids.
-
-Surge um novo mascote
-
-I A ideia de ter um mascote foi amadurecendo e a missão foi passada para uma profissional da área. 
-A ilustradora Russa Irina Blok, também funcionária do Google, ficou com a missão de representar e pequeno rabo de uma maneira mais agradável.
-
-
-[FOTO]
-
-A ideia principal da Irina ers representar tudo graficamente com poucos traços e de forma mais chapada. 
-O desenho também deveria gerar identificação rápida com quem o olha. Surgiu então o Bugdroid, o novo mascote do Android.
-
-[FOTO]
-
-A principal inspiração para os traços do novo Bugdroid velo daqueles bonequinhos que ilustram portas de banheiro para indicar o gênero de cada porta. Conta a lenda que a artista estava criando em sua mesa no escritório do Google e olhou para o lado dos banheiros e a identificação foi imediata: simples, limpo, objetivo.
-
-47 48
-
-[VIDEO]
-
-49 50
-
-51
-
-[EXTRA] Quer aprender mais?
-
-Outro assunto curioso em relação ao Android é que cada versão sempre Foi nomeada em homenagem a um doce, em ordem alfabética a partir de versão 1.5 até a 9.0.
-
-52
-
-53
-
-1.5 Cupcake
-
-54 55
-
-56
-
-1.6 Donut 3.0 Eclair
-
-2.2 Froyo
-
-57 58
-
-2.3 Gingerbread 3.0 Honeycomb
-
-4.0 Ice Cream Sandwich 4.1 Jelly Bean
-
-59 60
-
-61
-
-4.4 KitKat 5.0 Lolipop
-
-6.0 Marshmallow
-
-7.0 Nougat 8.0 Oreo
-
-9.0-Pis
-
-12:347:32 Adicionando conteúdo periféricoA principal inspiração para os traços do novo Bugdroid velo daqueles bonequinhos que ilustram portas de banheiro para indicar o gênero de cada porta. Conta a lenda que a artista estava criando em sua mesa no escritório do Google e olhou para o lado dos banheiros e a identificação foi imediata: simples, limpo, objetivo.
-
-47 48
-
-[VIDEO]
-
-49 50
-
-51
-
-[EXTRA] Quer aprender mais?
-
-Outro assunto curioso em relação ao Android é que cada versão sempre Foi nomeada em homenagem a um doce, em ordem alfabética a partir de versão 1.5 até a 9.0.
-
-
-1.5 Cupcake
-1.6 Donut 
-3.0 Eclair
-2.2 Froyo
-2.3 Gingerbread 
-3.0 Honeycomb
-4.0 Ice Cream Sandwich 
-4.1 Jelly Bean
-4.4 KitKat 
-5.0 Lolipop
-6.0 Marshmallow
-7.0 Nougat                    
-8.Oreo
-9.pie
-
-Infelizmente, o Android Q não existiu,
- pois o Google resolveu por fim a essa divertida prática e começou a usar numerações, o que deu origem ao Android 10.
-
- Acesse aqui o site Android History para conhecer a sequência das versões "adocicadas" e o que cada uma trouxe para o sistema Android. [/EXTRA]
-
- Então é issol Espero que você tenha gostado do nosso artigo com essa curiosidade sobre o sistema Android e seu simpático mascote.
-
-</article> 
-</main>
-
-<footer>
-
-<p>Site criado por Gustavo Guanabara para o CursoemVideo</p>
-
-</footer>
-
-</body>
-
-</html>
+   </body>
+   </html>
