--- a/hello/indexm.html
+++ b/hello/indexm.html
@@ -29,11 +29,11 @@
     </style>
 </head>
 <body>
-    <div classe="quadrado" id="q1">
+    <div class="quadrado" id="q1">
         <div>
-            <div classe="quadrado" id="q2"> 
+            <div class="quadrado" id="q2"> 
             </div>
-        </div classe="quadrado"  id="q3">
+        </div class="quadrado"  id="q3">
     </div>
 </body>
 </html>
