--- a/hello/indexm.html
+++ b/hello/indexm.html
@@ -1,39 +1,30 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>teste de imagem de fundo</title>
-    <style>
-        body{
-            background-image: url('pattern004.png');
-        }
-        div.quadrado{
-            display: inline-block;
-            border: 2px solid black;
-            border-radius: 10px;
-            background-color: gray;
-            width: 300px;
-            height: 300px;
-        }
-    div#q1{
-                 background-color: skyblue;
-    }
-        div#q2{
-                  background-image: linear-gradient(to bottom,yellow , red);
-        }
-        div#q3{
-                  background-image:url('imagens/pattern001.png') ;
-        }
-    </style>
-</head>
-<body>
-    <div class="quadrado" id="q1">
-        <div>
-            <div class="quadrado" id="q2"> 
-            </div>
-        </div class="quadrado"  id="q3">
-    </div>
-</body>
-</html>
+<IDOCTYPE html>
+
+    <html lang="pt-br">                                                                                                                                                                                  <head>
+   
+   
+   <meta charset="UTF-8">
+   
+   <meta name="viewport" content="width=device-width,
+   
+   initial-scale=1.0">
+   
+   <title>Personalização dos fundos</title>
+   
+   
+   <style>
+   
+   body{    
+   
+   background-image: url('imagens/pattern001.png');
+   
+   background-size: 100px 100px; background-repeat: no-repeat;
+
+       }
+   </style>
+   
+   </head>                                                                                                                                                                                                                <body>
+   
+    </body>
+   
+    </html>
