--- a/index 3.html
+++ b/index 3.html
@@ -16,7 +16,9 @@ initial-scale=1.0">
 
 #container {
 
-background-image: url('imagens/target001.png'); background-size: 100% 100%;
+background-image: url('imagens/target001.png'); 
+
+background-size: 100% 100%;
 
 position: relative;
 
@@ -30,7 +32,9 @@ background-color: purple;
 
 #conteudo {
 
-background-image: url('imagens/target001.png'); background-size: 100% 100%;
+background-image: url('imagens/target001.png'); 
+
+background-size: 100% 100%;
 
 position: absolute;
 
