--- a/hello/indexm.html
+++ b/hello/indexm.html
@@ -1,93 +1,68 @@
-<!DOCTYPE html>
-
-<html lang="pt-br">
-
-<head>
-
-<meta charset="UTF-8">
+<IDOCTYPE html>
 
 
 
-<meta name="viewport" content="width=device-width,
+  <html lang="pt-br">
+  
+   <head>
+  
+  
+  <meta charset="UTF-8">
+  
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <title>Estudos de iframe</title>
+  
+  <style>
+  
+  iframe {
+  
+  width: 400px; height: 400px;
+  
+  
+  </style>
+  
+  </head>
+  
+  <body>
+  
+  <h1>Testando o uso de um iframe</h1>
+  
+  <p>
+  
+  Acessando o site do
+  
+  <!-- Tamanho padrão 300x150 -->
+  
+  <iframe src="https://www.cursoemvideo.com" frameborder="333"
+  
+  height="500" scolling="no">
+  
+  I <a href="https://www.cursoemvideo.com" target="_blank">Curso em
+  
+  Video</a>
+  
+  </iframe>
+  
+  para aprender a programar.
+  
+  
+  <d/>
+  
+  
+  <p>
+  
+  O repositório do Guanabara
+  
+  
+  <iframe src="https://gustavoguanabara.github.io" frameborder="0"
+  
+  height="500" width="500"> no <a href="https://gustavoguanabara.github.io"
+  
+  target="-blank">GitHub</a>
 
-initial-scale=1.0"> <title>Tabelas</title>
+  </iframe>
+          tambem é legal
+    </p>
 
+    </body>
 
-<style>
-
-
-body {
-
-
-
-font-family: Arial, Helvetica, sans-serif;
-
-}
-
-
-table {
-
-border-collapse: collapse;
-
-
-}
-
-
-caption{     
-
-font-size: 1.3em;
-
-font-weight: bold;
-
-padding: 10px;
-
-  }
-
-
-th, td {
-
-border: 1px solid gray; padding: 10px;
-     }
-</style>
-
-</head>
-
-
-<body>
-
-<h1>Exercicio de Tabelas</h1>
-
-<table>
-
-<caption>
-
-Filmes Favorites
-
-</caption>
-<thead>
-
-<tr>
-
-<th>Grupos</th>
-
-<th>Nomes</th>
-
-<th>3Filmes</th>
-
-</tr>
-
-</thead>
-
-<tbody>
-<th>mulheres</th>
-<th>ana maria</th>
-<th>alien</th>
-<th>rambo</th>
-<th>vingadores</th>
-</tbody>
-
-</table>
-
-</body>
-
-</html>
+    </html>
