--- a/hello/indexm.html
+++ b/hello/indexm.html
@@ -1,68 +1,25 @@
-<IDOCTYPE html>
+<!DOCTYPE html 2 html>                                                                                                                                                                                   <html lang="pt-br">
+
+<head>
+
+<meta charset="UTF-8">
+
+<meta name="viewport" content="width-device-width, initial-scale=1.0">
+
+<title>Iframes</title>
+
+</head>
+
+<body>                                                                                                                                                                                                                        <h1>meu site principal</h1>
+
+ <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam debitis voluptas quam.
+   Itaque porro autem ab repellendus provident quas quaerat saepe vitae ratione repellat corporis, ex deserunt eum cupiditate debitis?</p>
 
 
+<iframe src="paginas-extras/pages.html" sandboxs"allow-same-origin allow-forms allow-scripts" referrerpolicy="no-referrer">
 
-  <html lang="pt-br">
-  
-   <head>
-  
-  
-  <meta charset="UTF-8">
-  
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <title>Estudos de iframe</title>
-  
-  <style>
-  
-  iframe {
-  
-  width: 400px; height: 400px;
-  
-  
-  </style>
-  
-  </head>
-  
-  <body>
-  
-  <h1>Testando o uso de um iframe</h1>
-  
-  <p>
-  
-  Acessando o site do
-  
-  <!-- Tamanho padrão 300x150 -->
-  
-  <iframe src="https://www.cursoemvideo.com" frameborder="333"
-  
-  height="500" scolling="no">
-  
-  I <a href="https://www.cursoemvideo.com" target="_blank">Curso em
-  
-  Video</a>
-  
-  </iframe>
-  
-  para aprender a programar.
-  
-  
-  <d/>
-  
-  
-  <p>
-  
-  O repositório do Guanabara
-  
-  
-  <iframe src="https://gustavoguanabara.github.io" frameborder="0"
-  
-  height="500" width="500"> no <a href="https://gustavoguanabara.github.io"
-  
-  target="-blank">GitHub</a>
+Seu navegador não é compatível com isso...
 
-  </iframe>
-          tambem é legal
-    </p>
+</iframe>                                                                                                                                                                                                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, laboriosam consequatur facilis voluptatibus impedit fugiat eum porro quos quas, culpa iure id nemo laborum similique ipsam iusto neque, maiores odio.</p>
 
-    </body>
-
-    </html>
+</body>                                                                                                                                                                                                                                          < /html>
