--- a/hello/indexm.html
+++ b/hello/indexm.html
@@ -1,25 +1,39 @@
-<!DOCTYPE html 2 html>                                                                                                                                                                                   <html lang="pt-br">
+<!DOCTYPE html>
+
+<html lang="pt-br">
+
 
 <head>
 
 <meta charset="UTF-8">
 
-<meta name="viewport" content="width-device-width, initial-scale=1.0">
+<meta name="viewport" content="width=device-width,
 
-<title>Iframes</title>
+initial-scale=1.0">
+
+<title>Home</title>
 
 </head>
 
-<body>                                                                                                                                                                                                                        <h1>meu site principal</h1>
+ <style>
+*{   
 
- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam debitis voluptas quam.
-   Itaque porro autem ab repellendus provident quas quaerat saepe vitae ratione repellat corporis, ex deserunt eum cupiditate debitis?</p>
+     margin: 0px;
+     padding: 0px;
+     background: black url('imagens/tela-home.jpg') no-repeat
+
+top center;
+background-size: cover; 
+
+    }
+
+</style>
+
+<body>
 
 
-<iframe src="paginas-extras/pages.html" sandboxs"allow-same-origin allow-forms allow-scripts" referrerpolicy="no-referrer">
+</body> 
+ </html>
 
-Seu navegador não é compatível com isso...
 
-</iframe>                                                                                                                                                                                                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, laboriosam consequatur facilis voluptatibus impedit fugiat eum porro quos quas, culpa iure id nemo laborum similique ipsam iusto neque, maiores odio.</p>
-
-</body>                                                                                                                                                                                                                                          < /html>
+                                                                                                                                                                                                                                         < /html>
